Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-18895

QtCreator doesn't save Installation directory for qbs projects (qbs.installRoot)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 4.5.0-beta1
    • Qt Creator 4.3.0, Qt Creator 4.4.0
    • None
    • Bug is relevant to both Windows and Linux (Ubuntu).
    • f93a55ac5c41cb0407a3ece1602a83ca23065b74

    Description

      Every time QtCreator is closed or a different project kit is selected, Installation directory setting (qbs.installRoot property) along with Use default location are dropped to their default values (<build-dir>/<kit-name>/install-root and true respectively).

      Older versions of QtCreator (as for 4.2.1) didn't have those settings. Specifying qbs.installRoot manually, along with other qbs project properties (in Properties field), worked fine.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kandeler Christian Kandeler
            antervis Andrei Russkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes