QbsProjectManager: Fix build setting getting lost

If the user set some qbs property and also unchecked the "Use default
installation" box, the latter setting got lost on re-loading the build
step configuration.

Task-number: QTCREATORBUG-18895
Change-Id: I868312fbbd8e5ca9ad9f34b88866fe7b72884a9a
Reviewed-by: Jake Petroules <jake.petroules@qt.io>